--- a/src/variables.css
+++ b/src/variables.css
@@ -79,8 +79,8 @@
    * Z-indexes.
    */
 
-  --z-index-overlay: 1;
-  --z-index-sidebar: 2;
-  --z-index-modal: 3;
-  --z-index-burger: 4;
+  --z-index-overlay: 100;
+  --z-index-sidebar: 200;
+  --z-index-burger: 300;
+  --z-index-modal: 400;
 }
